Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-97692

Incorrect rendering when using external camera and Temporal AA

    XMLWordPrintable

Details

    • Linux/X11
    • 77697b9ad7 (qt/qtquick3d/dev) 77697b9ad7 (qt/tqtc-qtquick3d/dev) 087ac13505 (qt/qtquick3d/6.4) 087ac13505 (qt/tqtc-qtquick3d/6.4) 087ac13505 (qt/qtquick3d/6.4.0) 087ac13505 (qt/tqtc-qtquick3d/6.4.0) 087ac13505 (qt/qtquick3d/6.4.1)
    • 2022 Qt Quick 3D: Week 11-12, 2022 Qt Quick 3D: Week 17-18, 2022 Qt Quick 3D: Week 19-20, 2022 Qt Quick 3D: Week 21-22, 2022 Qt Quick 3D: Week 39-40

    Description

      When a camera is not part of the local View3D and Temporal AA is enabled the rendering is incorrect.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            inho Inho Lee
            jokarlss Jonas Karlsson
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes