Fix Temporal AA and Progressive AA

TAA and PAA implementations depend on projection matrices.
In addition, the antialiasing quality is enabled.

Pick-to: 6.4
Fixes: QTBUG-97692
Change-Id: Iff57dc521137479638fc79e6cac95aeecf42ed64
Reviewed-by: Andy Nichols <andy.nichols@qt.io>